<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    tools:context="com.ponniroshu.fishup.ProfileActivity">


    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/overflow"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="16dp"
            android:src="@drawable/ic_menu_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_toRightOf="@+id/overflow"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="25dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="16dp"
            android:src="@drawable/ic_more_vert_black_24dp2" />
    </RelativeLayout>


    <TextView
        android:id="@+id/feed_1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:paddingRight="25dp"
        android:text="@string/feed_1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/feed_1"
        android:paddingRight="16dp"
        android:src="@drawable/ic_textsms_black_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feed_1"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:src="@drawable/ic_share_black_24dp" />

    <TextView
        android:id="@+id/feed_2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_1"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:paddingRight="25dp"
        android:text="@string/feed_2"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/feed_2"
        android:paddingRight="16dp"
        android:src="@drawable/ic_textsms_black_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feed_2"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:src="@drawable/ic_share_black_24dp" />

    <TextView
        android:id="@+id/feed_3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_2"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:paddingRight="25dp"
        android:text="@string/feed_3"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/feed_3"
        android:paddingRight="16dp"
        android:src="@drawable/ic_textsms_black_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feed_3"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:src="@drawable/ic_share_black_24dp" />

    <TextView
        android:id="@+id/feed_4"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_3"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical"
        android:paddingRight="25dp"
        android:text="@string/feed_4"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/feed_4"
        android:paddingRight="16dp"
        android:src="@drawable/ic_textsms_black_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feed_4"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:src="@drawable/ic_share_black_24dp" />


</RelativeLayout>
